2021-05-20 Dusan Jocic <dusanjocic@msn>
	* [Client] Moved client keys into C++ file

2021-05-19 Dusan Jocic <dusanjocic@msn>
	* [Client] Moved client console into C++ file
	* [Filesystem] Don't expose whole filesystem
	* [Client] Moved client input into C++ file

2021-05-18 Dusan Jocic <dusanjocic@msn>
	* [Engine] Show what system event overflow
	* [Engine] Removed Com_DPrintf, there is no real reason to have it inside the engine when there is developer convar
	* [Client] Show from what address server response with the packet
	
2021-05-17 Dusan Jocic <dusanjocic@msn>
	* [Client] Replaced "printf" with Com_Printf

2021-05-16 Dusan Jocic <dusanjocic@msn.com>
	* [Renderer] Added support for the Wavefront .OBJ model file format
	* [Renderer] Mirror surfaceType in rb_surfaceTable
	* [Misc] Fixed compiling
	* [Engine] Wide screen fixes

2021-05-09 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Reverted to the old implementation of the DefaultHomePath

2021-05-05 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Fixed compiling on the Windows platform
	* [Console] Fixed crash on startup on the Windows platform
	* [Console] Removed console shader
	
2021-05-05 dGr8LookinSparky <hissparkyness@gmail.com>
	* [Chat] Initial chat/console fixes & porting of chat features from Tremulous 1.3

2021-05-03 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Removed Windows only implementations of SysSnapVector and SetFloatEnv

2021-05-02 Dusan Jocic <dusanjocic@msn.com>
    * [cMake] Added "-mcmodel=large" to the cMake debug flags
	* [Convars] Initialize "cl_maxPing"
	* [Convars] Fixed crash with not initialized "cl_maxPing" convar
    
2021-05-01 Dusan Jocic <dusanjocic@msn.com>
	* [GLSL] Misc fixes
	* [Server] Fixed crash with allocate snapshot entities 
	* [Community Server] Allow community server only for Windows build until we get working MySQL for Linux
	* [Master Server] Changed protocol version

2021-04-30 Dusan Jocic <dusanjocic@msn.com>